[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "idf-mobilite-assistant"
version = "0.1.0"
description = "IDF Mobilité Assistant - Home Assistant integration"
authors = [{ name = "Yyrkoon94" }]
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["custom_components"]
